add exist file get-api
