# internal/01_entity/file_exists.go
@@ -1,0 +1,9 @@
+package entity
+
+type FileExistRequest struct {
+    Path string `json:"path" binding:"required"`
+}
+
+type FileExistResponse struct {
+    Exists bool `json:"exists"`
+}
